Bug 219222 - Fix non-unified build problem in CSSPropertyParserHelpers.cpp along with a little refactoring
Summary: Fix non-unified build problem in CSSPropertyParserHelpers.cpp along with a li...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: WebKit Nightly Build
Hardware: All All
: P1 Normal
Assignee: Darin Adler
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2020-11-20 13:40 PST by Darin Adler
Modified: 2020-11-26 16:00 PST (History)
11 users (show)

See Also:


Attachments
Patch (8.82 KB, patch)
2020-11-20 13:44 PST, Darin Adler
no flags Details | Formatted Diff | Diff
Patch (8.77 KB, patch)
2020-11-20 13:53 PST, Darin Adler
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Darin Adler 2020-11-20 13:40:45 PST
Fix non-unified build problem in CSSPropertyParserHelpers.cpp along with a little refactoring
Comment 1 Darin Adler 2020-11-20 13:44:30 PST
Created attachment 414713 [details]
Patch
Comment 2 Darin Adler 2020-11-20 13:46:03 PST
Comment on attachment 414713 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=414713&action=review

> Source/WebCore/css/parser/CSSPropertyParserHelpers.cpp:54
> +static inline bool isCSSWideKeyword(const CSSValueID& id)

This probably should just take CSSValueID rather than const&.
Comment 3 Darin Adler 2020-11-20 13:53:31 PST
Created attachment 414716 [details]
Patch
Comment 4 EWS 2020-11-26 15:59:59 PST
Committed r270167: <https://trac.webkit.org/changeset/270167>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 414716 [details].
Comment 5 Radar WebKit Bug Importer 2020-11-26 16:00:59 PST
<rdar://problem/71754694>